# fastapi-postgres-template

./: .dockerignore  .env  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml  requirements.txt
app/: __main__.py  main.py
app/alembic/: env.py
app/alembic/versions/: 1cd8732f4c1b_init_migration.py  42ab91d65155_initial_migration.py  9ead825737b6_add_user_confirmed_and_user_data.py  d9d711ecfc23_refresh_token_and_loginattempt_model.py
app/commands/: create_admin.py
app/features/auth/: router.py  schema.py  service.py
app/misc/: init.sql
app/models/: __init__.py  user.py
app/models/user_managment/: token.py  user.py
app/schedulers/: delete_refresh_tokens.py  scheduler.py
app/services/email/: __init__.py  base.py  email_service.py  templates.py
app/services/email/types/: __init__.py  account_exists.py  password_reset.py  verification.py  welcome.py
app/services/jobs/: __init__.py  delete_refresh_tokens.py  scheduler.py
app/templates/emails/: account_exists.html  base.html  password_reset.html  verification.html
app/utils/: api.py  cache.py  config.py  constants.py  database.py  dependencies.py  exception_handler.py  lifespan.py  logging.py  pagination.py  response.py  security.py
frontend/: index.html
misc/: init.sql
